# typescript-definitions-derive-watt

./: Cargo.toml
src/: lib.rs  typescript-definitions-derive.wasm
