[package]
name = "typescript-definitions-derive"
version = "0.1.10"
description = "serde support for exporting Typescript definitions"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/arabidopsis/typescript-definitions"
keywords =["typescript", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]
edition = "2018"


[lib]
proc-macro = true
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1.0.87", features = ["derive"] }
insta = "0.6.2"
[dependencies]
watt = "0.3"
